--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,8 @@
 
 [![Build Status](https://travis-ci.org/topepo/yardstick.svg?branch=master)](https://travis-ci.org/topepo/yardstick)
 [![Coverage Status](https://img.shields.io/codecov/c/github/topepo/yardstick/master.svg)](https://codecov.io/github/topepo/yardstick?branch=master)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/yardstick)](http://cran.r-project.org/web/packages/yardstick)
-[![Downloads](http://cranlogs.r-pkg.org/badges/yardstick)](http://cran.rstudio.com/package=yardstick)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/yardstick)](https://CRAN.R-project.org/package=yardstick)
+[![Downloads](http://cranlogs.r-pkg.org/badges/yardstick)](https://CRAN.R-project.org/package=yardstick)
 
 ```{r load, include = FALSE, message = FALSE, warning = FALSE}
 library(yardstick)
@@ -46,6 +46,8 @@ two_class_example %>% mnLogLoss(truth, !! lvl)
 To install the package:
 
 ```{r install, eval = FALSE}
+install.packages("yardstick")
+
 ## for development version:
 require("devtools")
 install_github("topepo/yardstick")
