Added unweighted kappa for issue #2

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 
 [![Build Status](https://travis-ci.org/topepo/yardstick.svg?branch=master)](https://travis-ci.org/topepo/yardstick)
 [![Coverage Status](https://img.shields.io/codecov/c/github/topepo/yardstick/master.svg)](https://codecov.io/github/topepo/yardstick?branch=master)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/yardstick)](https://cran.rstudio.com/web/packages/yardstick/index.html)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/yardstick)](http://cran.rstudio.com/package=yardstick)
 [![Downloads](http://cranlogs.r-pkg.org/badges/yardstick)](http://cran.rstudio.com/package=yardstick)
 ![](https://img.shields.io/badge/lifecycle-maturing-blue.svg)
 
