--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ two_class_example %>% roc_auc(truth, Class1)
 # probability columns:
 lvl <- levels(two_class_example$truth)
 
-two_class_example %>% mnLogLoss(truth, !! lvl)
+two_class_example %>% mn_log_loss(truth, !! lvl)
 ```
 
 ## Installation
