--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ library(dplyr)
 options(width = 100, digits = 3)
 ```
 
-`yardstick` is a package to estimate how well models are working using [tidy data](https://www.jstatsoft.org/article/view/v059i10) principals. The package webpage is [`https://tidymodels.github.io/yardstick/`](https://tidymodels.github.io/yardstick/) for more information.
+`yardstick` is a package to estimate how well models are working using [tidy data](https://www.jstatsoft.org/article/view/v059i10) principals. See the [package webpage](https://tidymodels.github.io/yardstick/) for more information.
 
 For example, suppose you create a classification model and predict a data set. You might have data that look like this:
 
