Clean up hex sticker usage

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ library(dplyr)
 options(width = 100, digits = 3)
 ```
 
-# yardstick <img src="yardstick_hex_thumb.png" align="right" height = "80px"/> 
+# yardstick <img src="man/figures/yardstick_hex.png" align="right" height = "80px"/> 
 
 [![Build Status](https://travis-ci.org/tidymodels/yardstick.svg?branch=master)](https://travis-ci.org/tidymodels/yardstick)
 [![Coverage Status](https://img.shields.io/codecov/c/github/tidymodels/yardstick/master.svg)](https://codecov.io/github/tidymodels/yardstick?branch=master)
