--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ options(width = 100, digits = 3)
 
 ## Overview
 
-`yardstick` is a package to estimate how well models are working using [tidy data](https://www.jstatsoft.org/article/view/v059i10) principals. See the [package webpage](https://tidymodels.github.io/yardstick/) for more information.
+`yardstick` is a package to estimate how well models are working using [tidy data](https://www.jstatsoft.org/article/view/v059i10) principles. See the [package webpage](https://tidymodels.github.io/yardstick/) for more information.
 
 ## Installation
 
