Update contributing section (#167)
* Add code of conduct

* Update contributing in README

* Change link wording for clarity

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ options(width = 100, digits = 3)
 
 ## Overview
 
-`yardstick` is a package to estimate how well models are working using [tidy data](https://www.jstatsoft.org/article/view/v059i10) principles. See the [package webpage](https://tidymodels.github.io/yardstick/) for more information.
+`yardstick` is a package to estimate how well models are working using [tidy data](https://www.jstatsoft.org/article/view/v059i10) principles. See the [package webpage](https://yardstick.tidymodels.org/) for more information.
 
 ## Installation
 
@@ -121,3 +121,16 @@ lvl <- levels(two_class_example$truth)
 two_class_example %>% 
   mn_log_loss(truth, !! lvl[1])
 ```
+
+
+## Contributing
+
+This project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+
+- For questions and discussions about tidymodels packages, modeling, and machine learning, please [post on RStudio Community](https://rstd.io/tidymodels-community).
+
+- If you think you have encountered a bug, please [submit an issue](https://github.com/tidymodels/yardstick/issues).
+
+- Either way, learn how to create and share a [reprex](https://rstd.io/reprex) (a minimal, reproducible example), to clearly communicate about your code.
+
+- Check out further details on [contributing guidelines for tidymodels packages](https://www.tidymodels.org/contribute/) and [how to get help](https://www.tidymodels.org/help/).
